# Snowflake-Analyst-Cortex

./: cortex_analyst_sis_demo_app1.py  cortex_analyst_streaming_demo.py  create_snowflake_objects.sql  pyproject.toml  revenue_timeseries.yaml
.devcontainer/: devcontainer.json
